make percentage and bar label text smaller so we have fewer overlapping issues within the scale score graph

--- a/src/less/rdw.less
+++ b/src/less/rdw.less
@@ -105,6 +105,7 @@
         display: block;
         width: 100%;
         height: @font-size-base * 1.15;
+        font-size: @font-size-small;
         line-height: 1.3;
         text-align: center;
         vertical-align: baseline;
